css/style.css
html {
  box-sizing: border-box;
}
html, body {
  height: 100%;
}
*{
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

body{
  background: rgb(22,34,32);
  background: linear-gradient(90deg, rgba(22,34,32,1) 0%, rgba(0,0,0,1) 47%, rgba(22,34,32,1) 100%);

  
}
main{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100%;
}
h1{
  font-size: 50px;
  display: flex;
  justify-content: center;
  margin: 0 45px 55px 45px;
  font-family: "Audiowide", serif;
  color: #dafaf4;
}
.sketchContainer{
  display: flex;
  justify-content: center;
  align-items: center;
}
canvas {
  border: solid 3px #137c99;
  box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.3);
  border-radius: 35px;
}

/* Accordeon card */

/* Core styles/functionality */

.tab {
  position: relative;
}
.tab input {
  position: absolute;
  opacity: 0;
  z-index: -1;
}
.tab__content {
  max-height: 0;
  overflow: hidden;
  transition: all 0.35s;
}
.tab input:checked ~ .tab__content {
  max-height: 40rem;
}

/* Visual styles */
.accordion {
  color: var(--theme);
  border: 2px solid;
  border-radius: 0.5rem;
  overflow: hidden;
}
.tab__label,
.tab__close {
  display: flex;
  color: #21bbe6;
  background: var(--theme);
  cursor: pointer;
  font-family: sans-serif ;
}
.tab__label {
  justify-content: space-between;
  padding: 0.5rem 1rem 1rem 1rem;
  font-size: 18px;
  line-height: 1.15;
}
.tab__label:hover {
color: #dafaf4;
}

.tab__label::after {
  content: "\276F";
  width: 1em;
  height: 1em;
  text-align: center;
  transform: rotate(90deg);
  transition: all 0.35s;
}
.tab input:checked + .tab__label::after {
  transform: rotate(270deg);
}

.tab__close {
  justify-content: flex-end;
  padding: 0.5rem 1rem;
  font-size: 0.75rem;
}
.accordion--radio {
  --theme: var(--secondary);
}
.bottom-tab{
  display: flex;
  justify-content: center;
}
/* Arrow animation */
.tab input:not(:checked) + .tab__label:hover::after {
  animation: bounce .5s infinite;
}
@keyframes bounce {
  25% {
    transform: rotate(90deg) translate(.25rem);
  }
  75% {
    transform: rotate(90deg) translate(-.25rem);
  }
}

.description-card{
  top:0;
  padding: 18px ;
  position: absolute;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  left: 0;
  margin: 3vw 5vw 5vw 3vw;
  background-color: #1a1a1aee;
  width: 20vw;
  border-radius: 25px;
  /* border: solid 5px #3815eb; */
  box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.3);
  min-width: 320px;
}
.description-card p{
  margin-bottom: 1em;
}
.description{
  color: #dafaf4;
  font-size: 16px;
  margin: 2vw 0 1vw 0;
  font-family:sans-serif;
}
.save-button{
  all: unset;
  background-color: #303030;
  padding: 12px 20px 12px 20px;
  border-radius: 15px;
  cursor: pointer;
  transition: background-color 0.15s ease;
  margin-top: 20px;
}
.save-button span{
  margin-bottom: 15px;
  color: #dafaf4;
  font-family: "Audiowide", serif;
  font-size: 16px;
}
.save-button:hover{
  background-color: #137c99;

}
.download-icon{
  width: 15px;
  margin-right: 5px;

}
.dna-image{
  position: absolute;
  bottom: 2vw;
  left:-15vw;
  width: 45vw;
  z-index: -1;
}
.copyright{
  color: #dafaf4;
  font-family: sans-serif;
  font-size: 13px;
  position: absolute;
  bottom: 5px;
  cursor: pointer;
  text-decoration: none;
  left: 50vw;
  transform: translateX(-50%);

}

/* How to use  */
#how-to-use{
  cursor: pointer;
  width: 100%;
  color: #21bbe6 ;
  margin: 2em auto;
  text-align: center;
  padding-right: 10px;
}
#how-to-use:hover{
  filter: brightness(1.5);
  color: #dafaf4;
}


/* Modale pagination */
/* .shepherd-theme-arrows{
  background-color: #dafaf4!important;
  border-radius: 15px!important;
  border: solid 5px #137c99;
} */
.shepherd-theme-arrows{
  font-family:sans-serif!important;
  color: #dafaf4!important;
  border-radius: 15px!important;
  padding: 2px!important;

}
.shepherd-content{
  padding: .75rem!important;
  border-radius: 15px!important;

}
.shepherd-arrow::before, .shepherd-content{
  background-color: #414f60!important;
  /* border: solid 5px #21bbe6; */
}
.shepherd-arrow::before{
  border: solid 2px #dafaf4; 

}
.shepherd-cancel-icon{
  color: #dafaf4!important;
}
.shepherd-cancel-icon:hover{
  color: #21bbe6!important;
}
.shepherd-header{
  padding: 0 .75rem 0!important;
  height: 20px;
}
.shepherd-text{
  padding: .5em .75em 1.5em .75em!important;
  color: #dafaf4!important;
}
.shepherd-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 .75rem!important;
}
.shepherd-pagination {
  margin-right: auto;
}
.shepherd-button {
  background-color: #137c99!important;
  color: #dafaf4!important;
  font-size: 16px;
  font-weight: 500;
}
.shepherd-button:hover {
  background-color: #21bbe6!important;
  color: #162220!important;
}
.shepherd-arrow{
  
}
.warning{
  color: #80fbdf;
}


/* 
========================
Media queries
========================
*/

/* ----------------------------- Mobile < 480px ------------------------------ */
@media (max-width: 480px) {
  main{
    justify-content: start;
  }
  h1{
    font-size: 27px;
    margin-top: 7vh;
    text-align: center;
  }
  .p5Canvas {
    position: absolute; 
    bottom: 0;  
    left: 50%; 
    transform: translateX(-50%); 
    margin-bottom: 35px; 
    z-index: -1;
  }
  .description-card{
    top:12vh;
    padding: 15px;
    position: absolute;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    left: 0;
    margin: 5vw 5vw 5vw 3vw;
    background-color: #1a1a1aee;
    width: 20vw;
    border-radius: 25px;
    /* border: solid 5px #3815eb; */
    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.3);
    z-index: 1;
    min-width: 50vw;
  }
  .description-card p{
    margin-bottom: 1em;
  }
  .description{
    color: #dafaf4;
    font-size: 12px;
    margin-bottom: 2vw;
    font-family:sans-serif;
  }
  .tab__label {
    font-size: 14px;
  }
  .save-button{
    padding: 10px 18px 10px 18px;
    margin-top: 15px;
  }
  .save-button span{
    font-size: 14px;
  }
  .copyright{
    font-size: 10px;
  }
  /* GUI */

  .gui-global-container{
    margin: 0 20px 0 ;
  }
  .dg.main {
    display: flex;
    flex-direction: column;
    height: 100vh!important;
  }
  .dg.main ul {
    flex-grow: 1;
  }
  .step4, #color-manager{
    margin-top: 30px;
  }
  .gui-main{
      transform: scale(0.8);  
      transform-origin: top right;
      max-width: 210px;  
      /* overflow: hidden; */
      position: fixed !important;
      top: 0px;
      right: 0;
      /* height: 100vh; */
  }

  .gui-main .property-name {
      font-size: 12px; 
  }
  .gui-color{
      transform: scale(0.8);  
      transform-origin: top right;
      max-width: 200px;  
      top: 0px;
      right: 180px; 
      /* overflow: hidden; */
      position: fixed !important;
  }

  .gui-color .property-name {
      font-size: 12px; 
  }
  .dg.main .close-button {
    font-size: 15px !important; 
    padding: 5px !important;
    height: 30px !important; 
    width: 200px !important; 
    margin-top: auto !important;
  }
  .dg.main .close-bottom{
    background-color: #137c99!important;
  }
}

/* ----------------------------- Mobile (landscape) et Tablet < 767px ------------------------------ */

@media (max-width: 767px) {
  
}
/* ----------------------------- Tablet (portrait)  < 767px ------------------------------ */

@media (min-width: 768px) and (max-width: 1024px) {

}
/* ----------------------------- Small desktop < 767px ------------------------------ */

@media (min-width: 1025px) and (max-width: 1280px) {
  
}
/* ----------------------------- Large desktop < 767px ------------------------------ */

@media (min-width: 1601px) {
}

